sample/wintershop/proxy/envoy-override.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: wintershop.io
              domains:
              - "*"
              routes:              
              - match:
                  prefix: "/auth"
                route:
                  # prefix_rewrite: "/"
                  cluster: keycloak-envoy         
              - match:
                  prefix: "/shop"
                route:
                  prefix_rewrite: "/shop/"
                  cluster: shop-webapp-envoy       
              - match:
                  prefix: "/cart"
                route:
                  prefix_rewrite: "/cart/"
                  cluster: cart-webapp-envoy
              - match:
                  prefix: "/api/v1/product"
                route:
                  cluster: product-api-envoy
              - match:
                  prefix: "/api/v1/cart"
                route:
                  cluster: cart-api-envoy
              - match:
                  prefix: "/"
                route:
                  prefix_rewrite: "/shop/"
                  cluster: shop-webapp-envoy
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: product-api-envoy
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: product-api-envoy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: product-api
                port_value: 8001
  - name: cart-api-envoy
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cart-api-envoy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cart-api
                port_value: 8002
  - name: keycloak-envoy
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: keycloak-envoy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak
                port_value: 8080
  - name: cart-webapp-envoy
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: cart-webapp-envoy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: cart-webapp
                port_value: 80
  - name: shop-webapp-envoy
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: shop-webapp-envoy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: shop-webapp
                port_value: 80
# admin:
#   address:
#     socket_address:
#       address: 0.0.0.0
#       port_value: 8001
layered_runtime:
  layers:
  - name: static_layer_0
    static_layer:
      envoy:
        resource_limits:
          listener:
            example_listener_name:
              connection_limit: 10000
